# parc

./: 010_getting_started.html  015_workflows.html  020_driver.html  025_preprocessor.html  026_source_ir.html  027_extraction.html  028_scanning.html  030_parser.html  040_ast.html  050_visitor.html  060_locations.html  070_testing.html  080_diagnostics_and_printing.html  090_project_layout.html  100_api_contract.html  110_end_to_end_workflows.html  120_error_surface.html  130_flavor_and_extension_support.html  140_unsupported_cases.html  150_reproducibility.html  160_contributor_workflow.html  170_stable_usage_patterns.html  180_support_tiers.html  190_parser_boundaries.html  200_release_checklist.html  210_migration_from_bic.html  404.html  Cargo.toml  Makefile  README.md  index.html  pac.html  parc.html  print.html  searcher-c2a407aa.js  searchindex-107bc103.js  searchindex-33ec1cec.js  searchindex-7851b8d0.js  searchindex-88c8a939.js  searchindex-c5b10b10.js  (+5 more)
book/: book.toml
book/src/: 010_getting_started.md  015_workflows.md  020_driver.md  025_preprocessor.md  030_parser.md  040_ast.md  050_visitor.md  060_locations.md  070_testing.md  080_diagnostics_and_printing.md  090_project_layout.md  100_api_contract.md  110_end_to_end_workflows.md  120_error_surface.md  130_flavor_and_extension_support.md  140_unsupported_cases.md  150_reproducibility.md  160_contributor_workflow.md  170_stable_usage_patterns.md  175_hardening_matrix.md  180_support_tiers.md  190_parser_boundaries.md  (+5 more)
src/: driver.rs  lib.rs  loc.rs  parse.rs  parser.rs  print.rs  strings.rs  tests.rs
(+84 files in other folders)
